@@ -1,8 +1,10 @@
 2008-11-03  Mikael Djurfeldt  <mikael@djurfeldt.com>
 
-	* eventsource.cc: Error checking when opening files.
+	* eventsink.cc: New file
 
 	* Makefile.am: Added eventsink.
+
+	* eventsource.cc: Error checking when opening files.
 
 	* Makefile.am: Compile viewevents conditionally.
 
